2020-12-11  Dmitry V. Levin  <ldv@altlinux.org>

	* configure.ac: Remove.
	* Makefile.am [STANDALONE]: Remove.
	(check_PROGRAMS): Add msg_tst, system-elf-libelf-test, and $(asm_TESTS)
	unconditionally.
	(TESTS): Add msg_tst, system-elf-libelf-test, $(asm_TESTS), and
	run-disasm-bpf.sh unconditionally.

2020-11-23  Frank Ch. Eigler  <fche@redhat.com>

	* run-debuginfod-find.sh: Add sqlite error injection & stats.

2020-11-02  Mark Wielaard  <mark@klomp.org>

	* run-debuginfod-find.sh: Create bogus R/nothing.rpm with cyclic
	symlink instead of chmod 000.

2020-11-19  Frank Ch. Eigler  <fche@redhat.com>

	* run-debuginfod-find.sh: Look for http-* metrics.

2020-11-01  Érico N. Rolim  <erico.erc@gmail.com>
	    Mark Wielaard  <mark@klomp.org>

	* alldts.c (main): Use DEFFILEMODE for open with O_CREAT.
	* arextract.c (main): Likewise.
	* ecp.c (main): Likewise for creat.
	* elfstrtab.c (check_elf): Use DEFFILEMODE for open with O_CREAT,
	remove mode from open calls without O_CREAT.
	* emptyfile.c (check_elf): Likewise.
	* fillfile.c (check_elf): Likewise.
	* vendorelf.c (check_elf): Likewise.
	* newdata.c (checkelf): Use DEFFILEMODE for open with O_CREAT.
	* update{1,2,3,4}.c (main): Likewise.
	*

2020-10-31  Mark Wielaard  <mark@klomp.org>

	* dwfl-proc-attach.c (dlopen): New external function override.

2020-10-31  Mark Wielaard  <mark@klomp.org>

	* test-wrapper.sh: Use =, not == for string compare.

2020-10-29  Mark Wielaard  <mark@klomp.org>

	* test-wrapper.sh: Determine whether the test is a script or not
	and run binaries directly under valgrind.
	* dwfl-bug-fd-leak.c (main): Call getrlimit before calling setrlimit.
	* dwfl-proc-attach.c (main): Call dwfl_end, pthread_cancel and
	pthread_join.
	* vdsosyms.c (main): Call dwfl_end.

2020-10-31  Frank Ch. Eigler  <fche@redhat.com>

	* run-debuginfod-find.sh: Modify for tweaked/new metrics.

2020-10-30  Frank Ch. Eigler  <fche@redhat.com>

	PR26775
	* run-debuginfod-find.sh: Modify test for restored